# duck-rabbit-enc

./: pyproject.toml
scripts/: export_card.py  generate_card.py  import_verification.py  utils.py  verify_card.py
scripts/cards/c_109173807/: 109173807_address.yaml  109173807_plain.txt  5813200253_check.txt  5813200253_verified.txt
scripts/cards/p_5813200253/: 5813200253_address.yaml  5813200253_plain.txt
scripts/go_server/: test_server.go
scripts/go_server/test_server_data/: server_landing.html
scripts/go_server/test_server_data/certs/: pkey  privkey.pem  privkey.ppk
scripts/go_server/test_server_data/temp_files/: 020036  285494  778442
